crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__block_if__missing_else.snap
---
source: crates/service/tests/diagnostics/typeck/block_if.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 6
        },
        "end": {
          "line": 7,
          "character": 25
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `else` branch with expected types [i32]"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 7
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "missing `else` branch with expected types [i32]"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 7
        },
        "end": {
          "line": 12,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [i32] at the end",
      "data": [
        116,
        184,
        [
          "i32"
        ]
      ]
    }
  ]
}
