crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__block_if__then_results_folded.snap
---
source: crates/service/tests/diagnostics/typeck/block_if.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 21
        },
        "end": {
          "line": 6,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 21
        },
        "end": {
          "line": 14,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 8
              },
              "end": {
                "line": 14,
                "character": 21
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 23,
          "character": 21
        },
        "end": {
          "line": 23,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, i32, i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 21
        },
        "end": {
          "line": 32,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, i32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 32,
                "character": 8
              },
              "end": {
                "line": 32,
                "character": 21
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
